[gd_scene load_steps=29 format=2]

[ext_resource path="res://Src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/Idle-v2/player-idle-v2-2.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/Idle-v2/player-idle-v2-1.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/Idle-v2/player-idle-v2-3.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/Idling/player_idle6.png" type="Texture" id=5]
[ext_resource path="res://assets/Player/Running/player-anim3.png" type="Texture" id=6]
[ext_resource path="res://assets/Player/Idle-v2/player-idle-v2-4.png" type="Texture" id=7]
[ext_resource path="res://assets/Player/Idling/player_idle8.png" type="Texture" id=8]
[ext_resource path="res://assets/Player/Idle-v2/player-idle-v2-5.png" type="Texture" id=9]
[ext_resource path="res://assets/Player/Idling/player_idle4.png" type="Texture" id=10]
[ext_resource path="res://assets/Player/Idling/player_idle7.png" type="Texture" id=11]
[ext_resource path="res://assets/Player/Idling/player_idle9.png" type="Texture" id=12]
[ext_resource path="res://assets/Player/Idling/player_idle10.png" type="Texture" id=13]
[ext_resource path="res://assets/Player/Running/player-anim2.png" type="Texture" id=14]
[ext_resource path="res://assets/Player/Idling/player_idle1.png" type="Texture" id=15]
[ext_resource path="res://assets/Player/Running/player-anim1.png" type="Texture" id=16]
[ext_resource path="res://assets/Player/Idling/player_idle5.png" type="Texture" id=17]
[ext_resource path="res://assets/Player/Running/player-anim4.png" type="Texture" id=18]
[ext_resource path="res://assets/misc/healthbar/healthbar-over.png" type="Texture" id=19]
[ext_resource path="res://assets/misc/healthbar/healthbar-back.png" type="Texture" id=20]
[ext_resource path="res://assets/misc/healthbar/healthbar-progress.png" type="Texture" id=21]
[ext_resource path="res://assets/Materials/flash_shadermaterial.tres" type="Material" id=22]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 10 ), ExtResource( 17 ), ExtResource( 5 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle-alt",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 6 ), ExtResource( 18 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14, 28 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 28.109 )

[sub_resource type="Animation" id=4]
resource_name = "appear_portal"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.965935, 1 ),
"update": 0,
"values": [ 720.0, -720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.659754, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "in_portal"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.965935, 1 ),
"update": 0,
"values": [ -720.0, 720.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.659754, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop_movement"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "take_damage"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="Player" type="KinematicBody2D"]
material = ExtResource( 22 )
collision_mask = 10
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
use_parent_material = true
rotation = -12.5664
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.498039, 0.992157, 0, 1 )
light_mask = -2147483647
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_left = 0.03
drag_margin_top = 0.31
drag_margin_right = 0.03
drag_margin_bottom = 0.31
editor_draw_drag_margin = true

[node name="EnnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.945098, 0.352941, 0.686275, 1 )
monitorable = false
collision_layer = 2147483648
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnnemyDetector"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appear_portal = SubResource( 4 )
anims/in_portal = SubResource( 5 )
anims/take_damage = SubResource( 6 )

[node name="TimerArrow" type="Timer" parent="."]

[node name="AttackBar" type="TextureProgress" parent="."]
margin_left = -16.0
margin_top = 32.0
margin_right = 984.0
margin_bottom = 232.0
rect_scale = Vector2( 0.032, 0.032 )
texture_under = ExtResource( 20 )
texture_over = ExtResource( 19 )
texture_progress = ExtResource( 21 )
tint_under = Color( 1, 1, 1, 0.521569 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Raycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Raycasts"]
position = Vector2( 16, 28 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 8

[node name="RayCast2D2" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, 28 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 8

[node name="RayCast2D3" type="RayCast2D" parent="Raycasts"]
position = Vector2( -16, 28 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 8

[node name="BounceRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 16, 28 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 512
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D2" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( 0, 28 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 512
collide_with_areas = true
collide_with_bodies = false

[node name="RayCast2D3" type="RayCast2D" parent="BounceRaycasts"]
position = Vector2( -16, 28 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 512
collide_with_areas = true
collide_with_bodies = false

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="area_entered" from="EnnemyDetector" to="." method="_on_EnnemyDetector_area_entered"]
[connection signal="body_entered" from="EnnemyDetector" to="." method="_on_EnnemyDetector_body_entered"]
[connection signal="timeout" from="TimerArrow" to="." method="_on_TimerArrow_timeout"]
